# Mtendere-Education

./: README.md  admin.py  auth.py  config.py  database.py  email_service.py  main.py  middleware.py  models.py  package-lock.json  package.json  pyproject.toml  replit.md  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/layout/: admin-sidebar.tsx  footer.tsx  navbar.tsx
client/src/components/sections/: cta.tsx  featured-universities.tsx  hero.tsx  services.tsx  testimonials.tsx  university-search.tsx
client/src/components/ui/: back-to-top.tsx  chat-widget.tsx
client/src/hooks/: useAuth.ts
client/src/pages/: home.tsx  landing.tsx
client/src/pages/admin/: applications.tsx  dashboard.tsx  universities.tsx
server/: routes.ts  storage.ts  vite.ts
server/services/: openai.ts
shared/: schema.ts
static/: admin.css
templates/: admin_dashboard_new.html  analytics.html
