[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.13",
    "fastapi-amis-admin>=0.7.3",
    "fastapi-mail>=1.5.0",
    "jinja2>=3.1.6",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "starlette>=0.46.2",
    "uvicorn>=0.34.3",
]
